add_library(D2HeaderA SHARED D2Header_a.cpp)

target_link_libraries(D2HeaderA Storm)
target_link_libraries(D2HeaderA Fog)
target_link_libraries(D2HeaderA D2CommonDefinitions)
target_link_libraries(D2HeaderA D2Common)
target_link_libraries(D2HeaderA D2Game)
target_link_libraries(D2HeaderA D2Net)
target_link_libraries(D2HeaderA D2Gfx)
target_link_libraries(D2HeaderA D2CMP)
target_link_libraries(D2HeaderA D2Win)
target_link_libraries(D2HeaderA D2Hell)
target_link_libraries(D2HeaderA D2Lang)

add_library(D2HeaderB SHARED D2Header_b.cpp)

target_link_libraries(D2HeaderB Storm)
target_link_libraries(D2HeaderB Fog)
target_link_libraries(D2HeaderB D2CommonDefinitions)
target_link_libraries(D2HeaderB D2Common)
target_link_libraries(D2HeaderB D2Game)
target_link_libraries(D2HeaderB D2Net)
target_link_libraries(D2HeaderB D2Gfx)
target_link_libraries(D2HeaderB D2CMP)
target_link_libraries(D2HeaderB D2Win)
target_link_libraries(D2HeaderB D2Hell)
target_link_libraries(D2HeaderB D2Lang)
